...
                <item
                    android:id="@+id/no_filter_place"
                    android:checked="true"
                    android:title="No filter"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/place_peach"
                    android:title="Peach"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/place_mario"
                    android:title="Mario"
                    app:showAsAction="collapseActionView" />
...
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/date_under_8"
                    android:title="x under 8h"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/date_over_8_under_10"
                    android:title="x between 8h-10h"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/date_over_10_under_12"
                    android:title="x between 10h-12h"
                    app:showAsAction="collapseActionView" />
...
