<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/create_new_meeting"
        android:icon="@drawable/ic_check"
        android:title="@string/toolbar_validate"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>