...
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/meeting_list_of_mails"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/meeting_color"
        app:layout_constraintTop_toTopOf="@+id/meeting_color"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Réunion A - 14h00 - Peach" />

    <androidx.appcompat.widget.AppCompatTextView
...
